; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/events/intel/extr_uncore_snbep.c_skx_count_chabox.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/events/intel/extr_uncore_snbep.c_skx_count_chabox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

@PCI_VENDOR_ID_INTEL = common dso_local global i32 0, align 4
@SKX_CAPID6 = common dso_local global i32 0, align 4
@SKX_CHA_BIT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @skx_count_chabox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skx_count_chabox() #0 {
  %1 = alloca %struct.pci_dev*, align 8
  %2 = alloca i32, align 4
  store %struct.pci_dev* null, %struct.pci_dev** %1, align 8
  store i32 0, i32* %2, align 4
  %3 = load i32, i32* @PCI_VENDOR_ID_INTEL, align 4
  %4 = load %struct.pci_dev*, %struct.pci_dev** %1, align 8
  %5 = call %struct.pci_dev* @pci_get_device(i32 %3, i32 8323, %struct.pci_dev* %4)
  store %struct.pci_dev* %5, %struct.pci_dev** %1, align 8
  %6 = load %struct.pci_dev*, %struct.pci_dev** %1, align 8
  %7 = icmp ne %struct.pci_dev* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %0
  br label %16

9:                                                ; preds = %0
  %10 = load %struct.pci_dev*, %struct.pci_dev** %1, align 8
  %11 = load i32, i32* @SKX_CAPID6, align 4
  %12 = call i32 @pci_read_config_dword(%struct.pci_dev* %10, i32 %11, i32* %2)
  %13 = load i32, i32* @SKX_CHA_BIT_MASK, align 4
  %14 = load i32, i32* %2, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %9, %8
  %17 = load %struct.pci_dev*, %struct.pci_dev** %1, align 8
  %18 = call i32 @pci_dev_put(%struct.pci_dev* %17)
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @hweight32(i32 %19)
  ret i32 %20
}

declare dso_local %struct.pci_dev* @pci_get_device(i32, i32, %struct.pci_dev*) #1

declare dso_local i32 @pci_read_config_dword(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @pci_dev_put(%struct.pci_dev*) #1

declare dso_local i32 @hweight32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
